--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "just-in-joy-mobile",
+          "organization": "lamb-apps"
+        }
       ]
     ],
     "experiments": {
